--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -26,6 +26,4 @@ jobs:
         uses: goreleaser/goreleaser-action@master
         with:
           version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
+          args: release --clean
